--- a/templates/base.html
+++ b/templates/base.html
@@ -8,11 +8,15 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/fonts/font-awesome-4.7.0/css/font-awesome.min.css') }}" >  
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/css/main.css') }}">  
  
-    {% block head %}{% endblock %}  
+    {% block head %}
+    
+    {% endblock %}  
 </head>  
 
 <body>  
-    {% block body %}{% endblock %}  
+    {% block body %}
+    
+    {% endblock %}  
 </body>  
   
 </html>  
