--- a/templates/hasil.html
+++ b/templates/hasil.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}  
    
 {% block head %}  
-    <title>Spotify Clustering</title>  
+    <title>Customer Segmentation</title>  
 {% endblock %}  
  
 {% block body %}  
